@@ -1,13 +1,10 @@
+Improvements for regular text
+-----------------------------
+mode where wordwrap wraps rest of paragraph?
+mode where all editing wraps rest of paragraph?
+
 Improvements for programming
 ----------------------------
-
-purify and optimizeindent options for ^K , ^K . smartbacks and autoindent
-
-  purity converts any combination of tabs and spaces used for indenting into
-  whatever is called for with indentc and istep.
-
-  optimizeindent makes any indentation created by joe use shortest
-  combination of tabs and spaces.
 
 Abbreviations
 
@@ -292,5 +289,3 @@ Other requests:
  -cleanup (delete extra lines and extra spaces at ends of lines).
 
  -show no. utf characters, not no. bytes
-
- - return key doesn't insert newline in overtype mode option.
